--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: xu-cheng/texlive-action@v2
         with:
-          scheme: full
+          docker_image: texlive/texlive
           run: |
            latexmk -pdf -auxdir=/tmp/latexmk
-            
