--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,9 @@ name: latexmk-workflow
 on:
   push:
     branches: [ "master" ]
+    paths:
+      - ken_wang_resume.tex
+      - resume.cls
 
 jobs:
   build_latex:
@@ -16,5 +19,5 @@ jobs:
            latexmk -pdf -auxdir=/tmp/latexmk
       - uses: actions/upload-artifact@v4
         with:
-          name: rendered-pdf
+          name: ken_wang_resume.pdf
           path: ken_wang_resume.pdf
