--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -7,6 +7,7 @@ on:
     branches: ["master"]
     paths:
       - ken_wang_resume.pdf
+      - index.html
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
