--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -6,8 +6,7 @@ on:
   push:
     branches: ["master"]
     paths:
-      - ken_wang_resume.pdf
-      - index.html
+      - docs
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
