--- a/.github/workflows/deploy-github-page.yml
+++ b/.github/workflows/deploy-github-page.yml
@@ -25,6 +25,22 @@ jobs:
         uses: actions/checkout@v4
       - name: setup-pages 
         uses: actions/configure-pages@v5
+      - name: cache-docker-image
+        id: cache-docker-image
+        uses: actions/cache@v3
+        with:
+          path: texlive-image
+          key: texlive-image-cache-key
+      - name: pull-docker-image
+        if: steps.cache-docker-image.outputs.cache-hit != 'true'
+        run: | 
+          docker pull texlive/texlive && \
+          mkdir -p texlive-image && \
+          docker image save texlive/texlive \
+            --output texlive-image/texlive.tar
+      - name: load-cached-docker-image
+        if: steps.cache-docker-image.outputs.cache-hit == 'true'
+        run: docker image load --input texlive-image/texlive.tar
       - name: run-texlive
         run: |
           docker run -i --rm \
